@@ -38,6 +38,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Added a logout link to the admindb interface and made both admin and
+      admindb logout effective for a site admin cookie if allowed.
+      Bug #769318.
+
     - Replaced the old Mailman logos and icon that install to Mailman's icons
       directory with the new ones.  If you copy these elsewhere on your
       server, please copy these new ones.
